--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,22 +1,58 @@
 {% extends "base.html" %} {% block title %}Home{% endblock %} {% block content
-        %}
-        <h1 align="center">Notes</h1>
-        <ul class="list-group list-group-flush" id="notes">
-          {% for note in user.notes %}
-          <li class="list-group-item">
-            {{ note.data }}
-            <button type="button" class="close" onClick="deleteNote({{ note.id }})">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </li>
-          {% endfor %}
-          
-        </ul>
-        <form method="POST">
-          <textarea name="note" id="note" class="form-control"></textarea>
-          <br />
-          <div align="center">
-            <button type="submit" class="btn btn-primary">Add Note</button>
-          </div>
-        </form>
-        {% endblock %}
+    %}
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="static/card.css">
+        <title>Home</title>
+    </head>
+    <body>
+        <div class="wrapper">
+            <div class="container">
+                <input type="radio" name="slide" id="c1" checked>
+                <a href="./ticketi.html" class="card" id="c1">
+                    <div class="row">
+                        <div class="icon">1</div>
+                        <div class="description">
+                            <h4>tekst</h4>
+                            <p>p</p>
+                        </div>
+                    </div>
+                </a>
+                <input type="radio" name="slide" id="c2" >
+                <a href="./programa_dnevnik.html" class="card" id="c2">
+                    <div class="row">
+                        <div class="icon">2</div>
+                        <div class="description">
+                            <h4>tekst</h4>
+                            <p>p</p>
+                        </div>
+                    </div>
+                </a>
+                <input type="radio" name="slide" id="c3" >
+                <a href="./menu.html" class="card" id="c3">
+                    <div class="row">
+                        <div class="icon">3</div>
+                        <div class="description">
+                            <h4>tekst</h4>
+                            <p>p</p>
+                        </div>
+                    </div>
+                </a>
+                <input type="radio" name="slide" id="c4" >
+                <a href="./calendar_to_do_list.html" class="card" id="c4">
+                    <div class="row">
+                        <div class="icon">4</div>
+                        <div class="description">
+                            <h4>tekst</h4>
+                            <p>p</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </body>
+    </html>
+    {% endblock %}
