--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -1,30 +1,28 @@
 {% extends "base.html" %} {% block title %}Login{% endblock %} {% block content
   %}
-  <main>
-  
-<div class="wrapper">
-  <span class="icon-close"><ion-icon name="close-outline">           
-  </ion-icon></span>
-  <div class="form-box login">
-      <h2>Login</h2>
   <form method="POST">
-    <div class="input-box">
-      <span class="icon"><ion-icon name="mail-outline"></ion-icon></span>
-      <input type="email" id = "email" name="email" required>
-      <label>email</label>
-  </div>
-  <div class="input-box">
-    <span class="icon"><ion-icon name="lock-closed-outline"></ion-icon></span>
-    <input type="password" id="password" name="password" required>
-    <label>password</label>
-</div>
-    
+    <h3 align="center">Login</h3>
+    <div class="form-group">
+      <label for="email">Email Address</label>
+      <input
+        type="email"
+        class="form-control"
+        id="email"
+        name="email"
+        placeholder="Enter email"
+      />
+    </div>
+    <div class="form-group">
+      <label for="password">Password</label>
+      <input
+        type="password"
+        class="form-control"
+        id="password"
+        name="password"
+        placeholder="Enter password"
+      />
+    </div>
     <br />
-    <button type="submit" class="btn">Login</button>
+    <button type="submit" class="btn btn-primary">Login</button>
   </form>
-
-    <script src="static/script.js"></script>
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-</main>
   {% endblock %}
