slojih routes i drugi

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -12,7 +12,7 @@
         <div class="wrapper">
             <div class="container">
                 <input type="radio" name="slide" id="c1" checked>
-                <a href="./ticketi.html" class="card" id="c1">
+                <a href="/tickets" class="card" id="c1">
                     <div class="row">
                         <div class="icon">1</div>
                         <div class="description">
@@ -22,7 +22,7 @@
                     </div>
                 </a>
                 <input type="radio" name="slide" id="c2" >
-                <a href="./programa_dnevnik.html" class="card" id="c2">
+                <a href="/programa_dnevnik" class="card" id="c2">
                     <div class="row">
                         <div class="icon">2</div>
                         <div class="description">
@@ -32,7 +32,7 @@
                     </div>
                 </a>
                 <input type="radio" name="slide" id="c3" >
-                <a href="./menu.html" class="card" id="c3">
+                <a href="/menu" class="card" id="c3">
                     <div class="row">
                         <div class="icon">3</div>
                         <div class="description">
@@ -42,7 +42,7 @@
                     </div>
                 </a>
                 <input type="radio" name="slide" id="c4" >
-                <a href="./calendar_to_do_list.html" class="card" id="c4">
+                <a href="/calendar_to_do_list" class="card" id="c4">
                     <div class="row">
                         <div class="icon">4</div>
                         <div class="description">
