--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -15,6 +15,12 @@
       crossorigin="anonymous"
     />
 
+    <link rel="stylesheet" href="static/style.css">
+
+    <script src="static/script.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
     <title>{% block title %}Home{% endblock %}</title>
   </head>
   <body>
