--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,5 +1,4 @@
-{% extends "base.html" %} {% block title %}Home{% endblock %} {% block content
-    %}
+{% extends "base.html" %} {% block title %}Home{% endblock %} {% block content %}
     <!DOCTYPE html>
     <html lang="en">
     <head>
@@ -7,28 +6,29 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="static/card.css">
         <title>Home</title>
+        <title>Document</title>
     </head>
     <body>
         <div class="wrapper">
             <div class="container">
                 <input type="radio" name="slide" id="c1" checked>
-                <a href="/tickets" class="card" id="c1">
+                <a href="./ticketi.html" class="card" id="c1">
+                <a href="menu.html" class="card" id="c1">
                     <div class="row">
                         <div class="icon">1</div>
                         <div class="description">
-                            <h4>tekst</h4>
-                            <p>p</p>
-                        </div>
+
+@@ -22,7 +21,7 @@
                     </div>
                 </a>
                 <input type="radio" name="slide" id="c2" >
-                <a href="/programa_dnevnik" class="card" id="c2">
+                <a href="./programa_dnevnik.html" class="card" id="c2">
+                <a href="page1.html" class="card" id="c2">
                     <div class="row">
                         <div class="icon">2</div>
                         <div class="description">
-                            <h4>tekst</h4>
-                            <p>p</p>
-                        </div>
+
+@@ -32,7 +31,7 @@
                     </div>
                 </a>
                 <input type="radio" name="slide" id="c3" >
@@ -36,9 +36,8 @@
                     <div class="row">
                         <div class="icon">3</div>
                         <div class="description">
-                            <h4>tekst</h4>
-                            <p>p</p>
-                        </div>
+
+@@ -42,17 +41,17 @@
                     </div>
                 </a>
                 <input type="radio" name="slide" id="c4" >
@@ -56,3 +55,4 @@
     </body>
     </html>
     {% endblock %}
+
