--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -1,28 +1,26 @@
 {% extends "base.html" %} {% block title %}Login{% endblock %} {% block content
-    %}
-    <form method="POST">
-      <h3 align="center">Login</h3>
-      <div class="form-group">
-        <label for="email">Email Address</label>
-        <input
-          type="email"
-          class="form-control"
-          id="email"
-          name="email"
-          placeholder="Enter email"
-        />
-      </div>
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input
-          type="password"
-          class="form-control"
-          id="password"
-          name="password"
-          placeholder="Enter password"
-        />
-      </div>
-      <br />
-      <button type="submit" class="btn btn-primary">Login</button>
-    </form>
-    {% endblock %}
+  %}
+  <div class="wrapper-login">
+  <form method="POST" class="form-box-login">
+    <h2 align="center">Login</h2>
+    <div class="input-box-login">
+      <input
+        type="email"
+        name="email"
+        placeholder=""
+      />
+      <label for="email">Email Address</label>
+    </div>
+    <div class="input-box-login">
+      <input
+        type="password"
+        name="password"
+        placeholder=""
+      />
+      <label for="password">Password</label>
+    </div>
+    <br />
+    <button type="submit" class="btn-login">Login</button>
+  </form>
+</div>
+  {% endblock %}
