login/signup edit

--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %} {% block title %}Sign Up{% endblock %} {% block
   content %}
+  <script src="static/index.js"></script>
   <div class="wrapper">
   <form method="POST" class="form-box">
     <h2 align="center">Sign Up</h2>
