--- a/website/static/style.css
+++ b/website/static/style.css
@@ -2,25 +2,30 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family:Arial, Helvetica, sans-serif
 }
+
+
 
 .navbar {
-  background-color: #343a40;
+  background-color: #1a1818;
+  background: transparent;
+  backdrop-filter: blur(5px);
   position: relative;
   font-weight: 600;
+  height: 40px;
 }
 
-body{
-  background: fixed;
-  background-size: 100%;
-  background: rgb(1, 15, 1);
+body {
+  margin: 0;
+  height: 100vh;
+  overflow: hidden;
+  background: black;
 }
 
 
 
 .navbar-dark .navbar-nav .nav-link {
-  color: black;
   position: relative;
   font-size: 1em;
   color: aliceblue;
@@ -35,31 +40,33 @@ body{
 }
 
 .wrapper{
-  margin-top: 50px;
-  position: relative;
+  margin-top: 80px;
+  position: fixed;
   width: 500px;
-  height: 700px;
-  border: 2px solid rgb(0, 0, 0);
+  height: 600px;
+  border: 2px outset rgb(233, 233, 233);
   border-radius: 20px;
-  backdrop-filter: blur(20px);
+  backdrop-filter: blur(5px);
   box-shadow: 0 0 30px black;
   justify-content: center;
   align-items: center;
-  background-color: rgb(51, 8, 51);
+  background-color: #343a40;
+  background: transparent;
 }
 
 .wrapper-login{
-  margin-top: 90px;
-  position: relative;
-  width: 400px;
+  margin-top: 110px;
+  position: fixed;
+  width: 500px;
   height: 500px;
-  border: 2px solid rgb(0, 0, 0);
+  border: 2px outset rgb(223, 222, 222);
   border-radius: 20px;
-  backdrop-filter: blur(20px);
+  backdrop-filter: blur(5px);
   box-shadow: 0 0 30px black;
   justify-content: center;
   align-items: center;
-  background-color: #2b0529;
+  background-color:#343a40;
+  background: transparent;
 }
 
 
@@ -69,7 +76,7 @@ body{
 }
   
 .form-box h2{
-  margin-top: 70px;
+  margin-top: 40px;
   font-size: 2em;
   color: rgb(255, 255, 255);
   text-align: center;
@@ -95,7 +102,7 @@ body{
   width: 80%;
   height: 50px;
   border-bottom: 2px solid rgb(255, 255, 255);
-  margin: 30px 35px;
+  margin: 30px 45px;
 }
 
 .input-box label{
@@ -139,7 +146,7 @@ body{
   border: none;
   outline: none;
   font-size: 1em;
-  color: black;
+  color: aliceblue;
   font-weight: 600;
   padding: 0 35px 0 5px;
 }
@@ -153,7 +160,7 @@ body{
   border: none;
   outline: none;
   font-size: 1em;
-  color: black;
+  color: aliceblue;
   font-weight: 600;
   padding: 0 35px 0 5px;
 }
@@ -170,28 +177,28 @@ body{
 .btn{
   width: 100%;
   height: 45px;
-  background: rgb(0, 0, 0);
+  background: aliceblue;
   border: none;
   outline: none;
   border-radius: 6px;
   cursor: pointer;
   font-size: 1em;
-  color: aliceblue;
-  font-weight: 500;
+  color: black;
+  font-weight: 700;
 }
 
 .btn-login{
   width: 80%;
   height: 45px;
-  background: rgb(0, 0, 0);
+  background: aliceblue;
   border: none;
   outline: none;
   border-radius: 6px;
   cursor: pointer;
   font-size: 1em;
-  color: aliceblue;
-  font-weight: 500;
-  margin: 15px 35px
+  color: black;
+  font-weight: 700;
+  margin: 15px 45px
 }
 
 .alert {
