--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -23,4 +23,5 @@
     <button type="submit" class="btn-login">Login</button>
   </form>
 </div>
+<script src="static/index.js"></script>
   {% endblock %}
