--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,42 +1,59 @@
 {% extends "base.html" %} {% block title %}Home{% endblock %} {% block content %}
     <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="static/card.css">
-        <title>Home</title>
-        <title>Document</title>
-    </head>
-    <body>
-        <div class="wrapper">
-            <div class="container">
-                <input type="radio" name="slide" id="c1" checked>
-                <a href="./ticketi.html" class="card" id="c1">
-                <a href="menu.html" class="card" id="c1">
-                    <div class="row">
-                        <div class="icon">1</div>
-                        <div class="description">
-
-@@ -22,7 +21,7 @@
-                    </div>
-                </a>
-                <input type="radio" name="slide" id="c2" >
-                <a href="./programa_dnevnik.html" class="card" id="c2">
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/static/card.css">
+    <title>Document</title>
+</head>
+<body>
+    <div class="Wrapper1">
+        <div class="Container">
+            
+                <div class="card" id="c1" style="background-image: url('/static/pic.jpg');">
+                    <a href="./ticketi.html" class="card">
+                        <div class="row">
+                            <div class="icon">1</div>
+                            <div class="description">
+                                <h4>tekst</h4>
+                                <p>p</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            
+            
+            
+            
+            <div class="card" id="c2">
+                <a href="./programa_dnevnik.html" class="card">
                     <div class="row">
                         <div class="icon">2</div>
                         <div class="description">
+                            <h4>tekst</h4>
+                            <p>p</p>
+                        </div>
                     </div>
                 </a>
-                <input type="radio" name="slide" id="c3" >
-                <a href="/menu" class="card" id="c3">
+            </div>
+            
+           
+            <div class="card" id="c3">
+                <a href="/menu" class="card">
                     <div class="row">
                         <div class="icon">3</div>
                         <div class="description">
+                            <h4>tekst</h4>
+                            <p>p</p>
+                        </div>
                     </div>
                 </a>
-                <input type="radio" name="slide" id="c4" >
-                <a href="/calendar_to_do_list" class="card" id="c4">
+            </div>
+            
+            <div class="card" id="c4">
+                <a href="/calendar_to_do_list" class="card">
                     <div class="row">
                         <div class="icon">4</div>
                         <div class="description">
@@ -47,7 +64,7 @@
                 </a>
             </div>
         </div>
-    </body>
-    </html>
-    {% endblock %}
-
+    </div>
+</body>
+</html>
+        {% endblock %}
