joji kod sutrin 15.3

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -12,12 +12,8 @@
     <div class="Wrapper1">
         <div class="Container">
             
-                <div class="card" id="c1" style="background-image: url('/static/pic.jpg');">
-<<<<<<< Updated upstream
-                    <a href="./ticketi.html" class="card">
-=======
-                    <a href="./tickets" class="card">
->>>>>>> Stashed changes
+                <div class="card1" id="c1" style="background-image: url('/static/pic.jpg');">
+                    <a href="./tickets" class="card1">
                         <div class="row">
                             <div class="icon">1</div>
                             <div class="description">
@@ -31,12 +27,8 @@
             
             
             
-            <div class="card" id="c2">
-<<<<<<< Updated upstream
-                <a href="./programa_dnevnik.html" class="card">
-=======
-                <a href="   \programa_dnevnik" class="card">
->>>>>>> Stashed changes
+            <div class="card1" id="c2">
+                <a href="/programa_dnevnik" class="card1">
                     <div class="row">
                         <div class="icon">2</div>
                         <div class="description">
@@ -48,8 +40,8 @@
             </div>
             
            
-            <div class="card" id="c3">
-                <a href="/menu" class="card">
+            <div class="card1" id="c3">
+                <a href="/menu" class="card1">
                     <div class="row">
                         <div class="icon">3</div>
                         <div class="description">
@@ -60,8 +52,8 @@
                 </a>
             </div>
             
-            <div class="card" id="c4">
-                <a href="/calendar_to_do_list" class="card">
+            <div class="card1" id="c4">
+                <a href="/calendar_to_do_list" class="card1">
                     <div class="row">
                         <div class="icon">4</div>
                         <div class="description">
@@ -75,9 +67,5 @@
     </div>
 </body>
 </html>
-<<<<<<< Updated upstream
-        {% endblock %}
-=======
         {% endblock %}
 
->>>>>>> Stashed changes
