--- a/website/static/card.css
+++ b/website/static/card.css
@@ -26,7 +26,7 @@ body {
 }
 
 
-.card {
+.card1 {
     height: 100%;
     width: 110px;
     border-radius: .75rem;
@@ -43,7 +43,7 @@ body {
 a{
     display: none;
 }
- .card a{
+ .card1 a{
     color: inherit;
     height: 100%;
     width: 120%;
@@ -59,21 +59,19 @@ a{
     text-decoration: none;
     box-shadow: 0px 0px 0px 0px rgba(0,0,0,0);
 }
-.card:hover {
+.card1:hover {
     width: 600px;
 }
 
-a:hover {
-    width: 600px;
-}
 
-.card > .row {
+
+.card1 > .row {
     color: white;
     display: flex;
     flex-wrap: nowrap;
 }
 
-/*.card > .row > .icon {
+/*.card1 > .row > .icon {
     background: black;;
     color: white;
     border-radius: 50%;
@@ -85,7 +83,7 @@ a:hover {
 }*/
 
 
-    .card > .row > .icon {
+    .card1 > .row > .icon {
         background: black; /* Set background color to black */
         color: white;
         border-radius: 50%;
@@ -97,7 +95,7 @@ a:hover {
         margin: 15px;
     }
 
-.card > .row > .description {
+.card11 > .row > .description {
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -110,7 +108,7 @@ a:hover {
     transition: opacity .3s ease, transform .3s ease; /* Променено: анимация за прозрачност и трансформация */
 }
 
-.card:hover .description {
+.card11:hover .description {
     opacity: 1; /* Променено: нова прозрачност при ховър */
     transform: translateY(0); /* Променено: нова трансформация при ховър */
 }
