ready home page

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -9,20 +9,16 @@
     <title>Document</title>
 </head>
 <body>
+    <h1> CHOOSE   AN  OPTION : </h1>
     <div class="Wrapper1">
         <div class="Container">
             
-                <div class="card" id="c1" style="background-image: url('/static/pic.jpg');">
-<<<<<<< Updated upstream
-                    <a href="./ticketi.html" class="card">
-=======
-                    <a href="./tickets" class="card">
->>>>>>> Stashed changes
+                <div class="card1" id="c1" style="background-image: url('/static/Ticket_system.jpg');">
+                    <a href="./tickets" class="card1">
                         <div class="row">
                             <div class="icon">1</div>
                             <div class="description">
-                                <h4>tekst</h4>
-                                <p>p</p>
+                                <h4>Troubleshooting helper</h4>
                             </div>
                         </div>
                     </a>
@@ -31,42 +27,35 @@
             
             
             
-            <div class="card" id="c2">
-<<<<<<< Updated upstream
-                <a href="./programa_dnevnik.html" class="card">
-=======
-                <a href="   \programa_dnevnik" class="card">
->>>>>>> Stashed changes
+            <div class="card1" id="c2" style="background-image: url('/static/dnevnik1.webp');">
+                <a href="/programa_dnevnik" class="card1">
                     <div class="row">
                         <div class="icon">2</div>
                         <div class="description">
-                            <h4>tekst</h4>
-                            <p>p</p>
+                            <h4>Grade book</h4>
                         </div>
                     </div>
                 </a>
             </div>
             
            
-            <div class="card" id="c3">
-                <a href="/menu" class="card">
+            <div class="card1" id="c3"style="background-image: url('/static/lunch.jpg');">
+                <a href="/menu" class="card1">
                     <div class="row">
                         <div class="icon">3</div>
                         <div class="description">
-                            <h4>tekst</h4>
-                            <p>p</p>
+                            <h4>School lunch menu</h4>
                         </div>
                     </div>
                 </a>
             </div>
             
-            <div class="card" id="c4">
-                <a href="/calendar_to_do_list" class="card">
+            <div class="card1" id="c4"style="background-image: url('/static/Screenshot2.png');">
+                <a href="/calendar_to_do_list" class="card1">
                     <div class="row">
                         <div class="icon">4</div>
                         <div class="description">
-                            <h4>tekst</h4>
-                            <p>p</p>
+                            <h4>Students reminder</h4>
                         </div>
                     </div>
                 </a>
@@ -75,9 +64,5 @@
     </div>
 </body>
 </html>
-<<<<<<< Updated upstream
-        {% endblock %}
-=======
         {% endblock %}
 
->>>>>>> Stashed changes
