--- a/website/static/card.css
+++ b/website/static/card.css
@@ -7,7 +7,8 @@
 }
 
 body {
-    background-color: white;
+    background: rgb(40,0,52);
+background: linear-gradient(213deg, rgba(40,0,52,1) 15%, rgba(0,0,0,1) 51%, rgba(40,0,52,1) 84%);
 }
 
 .Wrapper1 {
@@ -19,6 +20,7 @@ body {
 }
 
 .Container {
+    margin-bottom:150px;
     height: 400px;
     display: flex;
     flex-wrap: nowrap;
@@ -26,15 +28,15 @@ body {
 }
 
 
-.card {
+.card1 {
     height: 100%;
-    width: 110px;
+    width: 150px;
     border-radius: .75rem;
     background-size: cover;
     cursor: pointer;
     overflow: hidden;
     border-radius: 2rem;
-    margin: 0 5px;
+    margin: 0 8px;
     display: flex;
     align-items: flex-end;
     transition: width .6s cubic-bezier(.28, -0.03, 0, .99); /* Променено: анимиране на ширината */
@@ -43,7 +45,7 @@ body {
 a{
     display: none;
 }
- .card a{
+ .card1 a{
     color: inherit;
     height: 100%;
     width: 120%;
@@ -59,21 +61,19 @@ a{
     text-decoration: none;
     box-shadow: 0px 0px 0px 0px rgba(0,0,0,0);
 }
-.card:hover {
+.card1:hover {
     width: 600px;
 }
 
-a:hover {
-    width: 600px;
-}
 
-.card > .row {
+
+.card1 > .row {
     color: white;
     display: flex;
     flex-wrap: nowrap;
 }
 
-/*.card > .row > .icon {
+/*.card1 > .row > .icon {
     background: black;;
     color: white;
     border-radius: 50%;
@@ -85,7 +85,7 @@ a:hover {
 }*/
 
 
-    .card > .row > .icon {
+    .card1 > .row > .icon {
         background: black; /* Set background color to black */
         color: white;
         border-radius: 50%;
@@ -94,10 +94,11 @@ a:hover {
         display: flex;
         justify-content: center;
         align-items: center;
+        margin-bottom:20px;
         margin: 15px;
     }
 
-.card > .row > .description {
+.card11 > .row > .description {
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -110,16 +111,24 @@ a:hover {
     transition: opacity .3s ease, transform .3s ease; /* Променено: анимация за прозрачност и трансформация */
 }
 
-.card:hover .description {
+.card11:hover .description {
     opacity: 1; /* Променено: нова прозрачност при ховър */
     transform: translateY(0); /* Променено: нова трансформация при ховър */
 }
 
-.description p {
-    color: #b0b0ba;
-    padding-top: 5px;
-}
 
 .description h4 {
+    margin-top:40px;
     text-transform: uppercase;
+    color:black;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+h1{
+
+    margin-top:70px;
+    color:white;
+    text-align:center;
+    font-size:70px;
+    font-weight:400;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
