--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -28,11 +28,11 @@
                 <li class="nav-item">
                     <a class="nav-link" style="color: lawngreen; font-weight: bold">
                         <i class="fas fa-coins"></i>
-                        {{ current_user.prettier_budget }}
+                        {{ current_user.budget }}$
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link">Welcome, {{ current_user.username }}</a>
+                    <a class="nav-link">Welcome, {{ current_user.first_name }}</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/logout">Logout</a>
