--- a/website/templates/includes/items_modals.html
+++ b/website/templates/includes/items_modals.html
@@ -60,7 +60,7 @@
             </h6>
             <br>
             <input id="purchased_item" name="purchased_item" type="hidden" value="{{item.name}}">
-            {{ purchase_form.submit(class="btn btn-outline-success btn-block") }}
+            {{ purchase_form.submit(class="btn btn-outline-success btn-block asbtn") }}
           </form>
         </div>
         <div class="modal-footer">
