--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -1,5 +1,6 @@
-{% extends "base.html" %} {% block title %}Login{% endblock %} {% block content
-  %}
+{% extends "base.html" %} 
+{% block title %}Login{% endblock %} 
+{% block content %}
   <div class="wrapper-login">
   <form method="POST" class="form-box-login">
     <h2 align="center">Login</h2>
@@ -24,4 +25,5 @@
   </form>
 </div>
 <script src="static/index.js"></script>
-  {% endblock %}
+
+{% endblock %}
