--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -27,7 +27,7 @@
             
             
             <div class="card1" id="c2" style="background-image: url('/static/dnevnik1.webp');">
-                <a href="/programa_dnevnik" class="card1">
+                <a href="/gradebook" class="card1">
                     <div class="row">
                         <div class="icon">2</div>
                         <div class="description">
