--- a/website/static/style.css
+++ b/website/static/style.css
@@ -12,9 +12,10 @@ body {
   background: black;
 }
 
-
-
-
+.navbar:hover{
+  color: rgb(255, 255, 255);
+  font-weight: 600;
+}
 
 .wrapper{
   margin-top: 80px;
