--- a/website/static/gradebook.css
+++ b/website/static/gradebook.css
@@ -3,14 +3,32 @@ body {
 }
 
 h1 {
-    font-size: 30px;
+    font-size: 50px;
+    font-weight: 700;
     color: #fff;
     text-transform: uppercase;
     font-weight: 300;
     text-align: center;
     margin-bottom: 15px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    margin-top: 60px;
   }
+
+.wrapper-gradebook{
+    position: relative;
+    margin-top: 80px;
+    width: 900px;
+    height: 200px;
+    border: 2px outset rgb(174, 162, 162);
+    border-radius: 20px;
+    backdrop-filter: blur(5px);
+    box-shadow: 0 0 30px black;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-color: #343a40;
+    background: transparent;
+}
 
 #form-container {
     margin-bottom: 20px;
@@ -29,6 +47,7 @@ h1 {
 
 #grades-table {
     width: 100%;
+    margin-top: 60px;
     border-collapse: collapse;
     table-layout: fixed;
 }
@@ -44,7 +63,8 @@ h1 {
 }
 
 #grades-table th, #grades-table td {
-    border: 1px solid #ddd;
+    border: 2px solid #ddd;
+    border-radius: 2px;
     padding: 8px;
 }
 
@@ -72,6 +92,23 @@ thead {
     background-color: rgba(255,255,255,0.3);
 }
 
+select{
+    margin-top: 70px;
+    height: 50px;
+    color: black;
+    backdrop-filter: blur(10px);
+}
+
+input{
+    height: 50px;
+    width: 160px;
+}
+
+button{
+    height: 50px;
+    width: 160px;
+}
+
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,500,300,700);
   body {
     background: -webkit-linear-gradient(left, #3f032a, black);
@@ -82,6 +119,10 @@ thead {
   ::-webkit-scrollbar {
     width: 6px;
 } 
+
+td{
+    color: white !important;
+}
 
 ::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
