--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -27,7 +27,7 @@
                 <li class="nav-item">
                     <a class="nav-link" style="color: lawngreen; font-weight: bold">
                         <i class="fas fa-coins"></i>
-                        {{ current_user.budget }}$
+                        {{ current_user.budget }}BGN
                     </a>
                 </li>
                 <li class="nav-item">
