--- a/website/templates/includes/items_modals.html
+++ b/website/templates/includes/items_modals.html
@@ -4,7 +4,6 @@
     }
   </style>
   
-  <!-- More Info -->
   <div class="modal fade" id="Modal-MoreInfo-{{item.id}}"
        tabindex="-1"
        aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -12,7 +11,6 @@
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="ModalLabel">
-            <!-- -->
             {{ item.name }}
           </h5>
           <button type="button" class="close"
@@ -32,7 +30,6 @@
     </div>
   </div>
   
-  <!-- Purchase Confirm -->
   <div class="modal fade" id="Modal-PurchaseConfirm-{{ item.id }}"
        tabindex="-1"
        aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -40,7 +37,6 @@
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="ModalLabel">
-            <!-- -->
             {{ item.name }}
           </h5>
           <button type="button" class="close"
@@ -52,7 +48,7 @@
           <form method="POST">
             {{ purchase_form.hidden_tag() }}
             <h4 class="text-center">
-              Are you sure you want to buy {{ item.name }} for {{ item.price }}$ ?
+              Are you sure you want to buy {{ item.name }} for {{ item.price }}BGN ?
             </h4>
             <br>
             <h6 class="text-center">
