--- a/website/templates/menu.html
+++ b/website/templates/menu.html
@@ -30,7 +30,6 @@ MENU Page
             </thead>
             <tbody>
               
-               <!-- Your rows inside the table HERE: -->
                {% for item in items %}
                {% include 'includes/items_modals.html' %}
             
@@ -39,7 +38,7 @@ MENU Page
                   <td>{{ item.id }}</td>
                   <td>{{ item.name }}</td>
                   <td>{{ item.barcode }}</td>
-                  <td>{{ item.price }}$</td>
+                  <td>{{ item.price }}BGN</td>
                   <td>
                     
                      <button class="btn btn-outline btn-info" data-toggle="modal" data-target="#Modal-MoreInfo-{{ item.id }}">Ingredients</button>
@@ -62,7 +61,7 @@ MENU Page
                           <h5 class="card-title">{{ owned_item.name }}</h5>
                           
                           <p class="card-text"><strong>
-                              This item costs {{ owned_item.price }}$
+                              This item costs {{ owned_item.price }}BGN
                           </strong></p>
                       </div>
                   </div>
